--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,39 +1,27 @@
-version: 2.1
-
-orbs:
-  node: circleci/node@3.0.1
-
-jobs:
-  build:
-    working_directory: ~/
-    executor: node/default
-    steps:
-      - checkout
-      - node/install-npm
-      - node/install-packages:
-          app-dir: ~/https://github.com/Elvis-Jagger-Abdul-Jabbar/The_Last_Chance
-          cache-path: node_modules
-          override-ci-command: npm i
-      - persist_to_workspace:
-          root: .
-          paths:
-            - .
-
-  test:
-    docker:
-      - image: cimg/node:current
-    steps:
-      - attach_workspace:
-          at: .
-      - run:
-          name: Test
-          command: npm test
+version: 2
+  jobs:
+    test:
+      docker:
+        - image: circleci/node:12.16
+      steps:
+        - checkout
+        - run: echo "Running tests"
+        - run: npm install
+        - run: npm test
+    build:
+      docker:
+        - image: circleci/node:12.16
+      steps:
+        - checkout
+        - run: echo "build project"
+        - npm install
+        - npm run build
 
 workflows:
   version: 2
-  build_and_test:
-    jobs:
-      - build
-      - test:
+    test_build:
+      jobs:
+        - test
+        - build:
           requires:
-            - build
+            - test
