--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,27 +1,11 @@
 version: 2
-  jobs:
-    test:
-      docker:
-        - image: circleci/node:12.16
-      steps:
-        - checkout
-        - run: echo "Running tests"
-        - run: npm install
-        - run: npm test
-    build:
-      docker:
-        - image: circleci/node:12.16
-      steps:
-        - checkout
-        - run: echo "build project"
-        - npm install
-        - npm run build
-
-workflows:
-  version: 2
-    test_build:
-      jobs:
-        - test
-        - build:
-          requires:
-            - test
+jobs:
+  build:
+    docker:
+      — image: circleci/node:7.10
+    working_directory: ~/repo
+    steps:
+      — checkout
+      - run: npm install
+ 
+      — run: npm test
