--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "mocha": "^9.2.2",
+    "mochawesome": "4.1.0",
     "mysql-import": "^5.0.21"
   }
 }
