--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,12 @@ jobs:
     docker:
       # Define image
       - image: circleci/node:10
+      - image: cimg/mysql:8.0
+        environment:
+          MYSQL_ROOT_PASSWORD: MYSQL_PASS
+          MYSQL_DATABASE: world
+          MYSQL_USER: root
+          MYSQL_PASSWORD: MYSQL_PASS
     # Define the commands that will happen within the code
     steps:
       # Alias for git clone
