--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,8 @@ jobs:
         environment:
           MYSQL_ROOT_PASSWORD: MYSQL_PASS
           MYSQL_DATABASE: world
-          MYSQL_USER: root
-          MYSQL_PASSWORD: MYSQL_PASS
+          MYSQL_USER: thelastchance
+          MYSQL_PASSWORD: 
     # Define the commands that will happen within the code
     steps:
       # Alias for git clone
