--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
           MYSQL_ROOT_PASSWORD: MYSQL_PASS
           MYSQL_DATABASE: world
           MYSQL_USER: thelastchance
-          MYSQL_PASSWORD: 
+          MYSQL_PASSWORD: ""
     # Define the commands that will happen within the code
     steps:
       # Alias for git clone
@@ -23,6 +23,23 @@ jobs:
           name: Install npm dependencies
           command: |
             npm install --save
+      - run:
+      # Our primary container isn't MYSQL so run a sleep command until it's ready.
+          name: Waiting for MySQL to be ready
+          command: |
+            for i in `seq 1 10`;
+            do
+              nc -z 127.0.0.1 3306 && echo Success && exit 0
+              echo -n .
+              sleep 1
+            done
+            echo Failed waiting for MySQL && exit 1
+      - run:
+          name: Install MySQL CLI; Import dummy data; run an example query
+          command: |
+            sudo apt-get install default-mysql-client
+            mysql -h 127.0.0.1 -u user -ppassw0rd test_db < sql-data/dummy.sql
+            mysql -h 127.0.0.1 -u user -ppassw0rd --execute="SELECT * FROM test_db.Persons"
       # Run the test
       - run:
           name: Run Unti Tests
@@ -33,12 +50,7 @@ jobs:
           path: test-results
       - store_artifacts:
           path: test-results
-      - run:
-          name: Install MySQL CLI; Import dummy data; run an example query
-          command: |
-            sudo apt-get install default-mysql-client
-            mysql -h 127.0.0.1 -u user -ppassw0rd test_db < sql-data/dummy.sql
-            mysql -h 127.0.0.1 -u user -ppassw0rd --execute="SELECT * FROM test_db.Persons"
+     
 # Workflows
 workflows:
   build_test:
