--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,23 @@ jobs:
           MYSQL_ROOT_PASSWORD: MYSQL_PASS
           MYSQL_DATABASE: world
           MYSQL_USER: thelastchance
-          MYSQL_PASSWORD: 
+          MYSQL_PASSWORD: ""
     # Define the commands that will happen within the code
     steps:
       # Alias for git clone
       - checkout
       # Run block
+      - run:
+      # Our primary container isn't MYSQL so run a sleep command until it's ready.
+          name: Waiting for MySQL to be ready
+          command: |
+            for i in `seq 1 10`;
+            do
+              nc -z 127.0.0.1 3306 && echo Success && exit 0
+              echo -n .
+              sleep 1
+            done
+            echo Failed waiting for MySQL && exit 1
       - run:
           # Name (description)
           name: Install npm dependencies
