--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,8 +49,8 @@ jobs:
           name: Install MySQL CLI; Import dummy data; run an example query
           command: |
             sudo apt-get install default-mysql-client
-            mysql -h 127.0.0.1 -u user -ppassw0rd test_db < sql-data/dummy.sql
-            mysql -h 127.0.0.1 -u user -ppassw0rd --execute="SELECT * FROM test_db.Persons"
+            mysql -h 127.0.0.1 -u user -ppassw0rd world < world/world.sql
+            mysql -h 127.0.0.1 -u user -ppassw0rd --execute="SELECT * FROM country where name = 'Germany'"
       # Run the test
       - run:
           name: Run Unti Tests
