--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
           MYSQL_ROOT_PASSWORD: MYSQL_PASS
           MYSQL_DATABASE: world
           MYSQL_USER: thelastchance
-          MYSQL_PASSWORD: ""
+          MYSQL_PASSWORD: MYSQL_PASS
     # Define the commands that will happen within the code
     steps:
       # Alias for git clone
@@ -49,8 +49,8 @@ jobs:
           name: Install MySQL CLI; Import dummy data; run an example query
           command: |
             sudo apt-get install default-mysql-client
-            mysql -h 127.0.0.1 -u root -pMYSQL_PASS world < ./world-db/world.sql
-            mysql -h 127.0.0.1 -u root -pMYSQL_PASS --execute="SELECT * FROM country where name = 'Germany'"
+            mysql -h 127.0.0.1 -u thelastchance -pMYSQL_PASS world < ./world-db/world.sql
+            mysql -h 127.0.0.1 -u thelastchance -pMYSQL_PASS --execute="SELECT * FROM country where name = 'Germany'"
       # Run the test
       - run:
           name: Run Unti Tests
