--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
           name: Install MySQL CLI; Import dummy data; run an example query
           command: |
             sudo apt-get install default-mysql-client
-            mysql -h 127.0.0.1 -u thelastchance -pMYSQL_PASS world < ../world-db/world.sql
+            mysql -h 127.0.0.1 -u thelastchance -pMYSQL_PASS world < ./world-db/world.sql
             mysql -h 127.0.0.1 -u thelastchance -pMYSQL_PASS --execute="SELECT * FROM country where name = 'Germany'"
       # Run the test
       - run:
