--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,7 @@ jobs:
           command: |
             sudo apt-get install default-mysql-client
             mysql -h 127.0.0.1 -u thelastchance -pMYSQL_PASS world < ./world-db/world.sql
+            mysql -h 127.0.0.1 -u thelastchance -pMYSQL_PASS use world
             mysql -h 127.0.0.1 -u thelastchance -pMYSQL_PASS --execute="SELECT * FROM country where name = 'Germany'"
       # Run the test
       - run:
