--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,7 @@ jobs:
           path: test-results
       - store_artifacts:
           path: test-results
+          npm test --forceExit
      
 # Workflows
 workflows:
