--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
           MYSQL_DATABASE: world
           MYSQL_USER: thelastchance
           MYSQL_PASSWORD: MYSQL_PASS
+            explicit_defaults_for_timestamp = 1
     # Define the commands that will happen within the code
     steps:
       # Alias for git clone
