--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "supervisor": "express-server.js",
-    "test": "mocha --timeout 10000",
+    "test": "mocha --exit --timeout 10000",
     "start": "npx nodemon server.js"
   },
   "keywords": [],
