--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
           name: Run Unti Tests
           no_output_timeout: 30m
           command: |
-            ./node_modules/mocha/bin/mocha test/ --reporter mochawesome --reporter-options reportDir=test-results,reportFilename=test-results
+            ./node_modules/mocha/bin/mocha test/ --exit --reporter mochawesome --reporter-options reportDir=test-results,reportFilename=test-results
             npm test --forceExit
       # Store test results in xml file
       - store_test_results:
